@@ -86,6 +86,28 @@ devices = dict(
                       right = 'sxr',
                       bottom = 'sxb',
                       top = 'sxt'),
+    syl      = device('nicos.generic.VirtualMotor',
+                      abslimits = (-20, 40),
+                      lowlevel = True,
+                      unit = 'mm'),
+    syr      = device('nicos.generic.VirtualMotor',
+                      abslimits = (-40, 20),
+                      lowlevel = True,
+                      unit = 'mm'),
+    syb      = device('nicos.generic.VirtualMotor',
+                      abslimits = (-50, 30),
+                      lowlevel = True,
+                      unit = 'mm'),
+    syt      = device('nicos.generic.VirtualMotor',
+                      abslimits = (-30, 50),
+                      lowlevel = True,
+                      unit = 'mm'),
+    slit2    = device('nicos.generic.Slit',
+                      left = 'syl',
+                      right = 'syr',
+                      bottom = 'syb',
+                      top = 'syt',
+                      coordinates = 'opposite'),
 
     mm       = device('nicos.generic.ManualMove',
                       abslimits = (0, 100),
